tests/baselines/reference/derivedClassOverridesPrivateFunction1.errors.txt
tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts(10,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'BaseClass'.
tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts(12,13): error TS2416: Property '_init' in type 'DerivedClass' is not assignable to the same property in base type 'BaseClass'.
  Type '() => void' is not assignable to type '() => void'. Two different types with this name exist, but they are unrelated.
    The 'this' types of each signature are incompatible.
      Type 'BaseClass' is not assignable to type 'DerivedClass'.
        Types have separate declarations of a private property '_init'.


==== tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts (2 errors) ====
    class BaseClass {
        constructor() {
            this._init();
        }
        private _init() {
        }
    }
    class DerivedClass extends BaseClass {
        constructor() {
            super();
            ~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'BaseClass'.
        }
        private _init() {
                ~~~~~
!!! error TS2416: Property '_init' in type 'DerivedClass' is not assignable to the same property in base type 'BaseClass'.
!!! error TS2416:   Type '() => void' is not assignable to type '() => void'. Two different types with this name exist, but they are unrelated.
!!! error TS2416:     The 'this' types of each signature are incompatible.
!!! error TS2416:       Type 'BaseClass' is not assignable to type 'DerivedClass'.
!!! error TS2416:         Types have separate declarations of a private property '_init'.
        }
    }
    new DerivedClass();